--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </div>
             <div class="box">
                 <p> <span> phone : </span> ++917338803717 </p>
-                <p> <span> email : </span> raj.sundar@cogentibs.in </p>
+                <p> <span> email : </span> mail4raja1997@gmail.com </p>
                 <p> <span> country : </span> India </p>
             </div>
         </div>
@@ -257,9 +257,17 @@
 
         <div class="box">
             <div class="content">
-                <span> 2022 - Present </span>
+                <span> 2022 - OCT </span>
                 <h3>Full-Stack Developer</h3>
-                <p>Current working in CogentIBS as a Full stack developer which is located in Michigan,USA</p>
+                <p>As a team ,  worked with CogentIBS as a Full stack developer which is located in Michigan,USA</p>
+            </div>
+        </div>
+        
+        <div class="box">
+            <div class="content">
+                <span> 2022 - Present </span>
+                <h3>Software Engineer</h3>
+                <p>Current working in INCEDO as a Software Engineer which is located in Chennai,Tamilnadu</p>
             </div>
         </div>
 
@@ -287,7 +295,7 @@
         <div class="icons">
             <i class="fas fa-envelope"></i>
             <h3>my email</h3>
-            <p>raj.sundar@cogentibs.in</p>
+            <p>mail4raja1997@gmail.com</p>
         </div>
 
         <div class="icons">
